feat: routes and pages

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!--common header-->
-
+    <div data-th-replace="navbar :: navbar"></div>
     <div>
       <p>Base Page Content</p>
       <section th:replace="${content}"></section>
