--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -2,7 +2,7 @@
 <html
   lang="en"
   xmlns:th="http://www.thymeleaf.org"
-  th:replace="~{base :: parent(~{::#content}, 'Services Page')}"
+  th:replace="~{base :: parent(~{::#content}, 'ContactHive | Services')}"
 >
   <head></head>
   <body>
