--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,12 +2,12 @@
 <html
   lang="en"
   xmlns:th="http://www.thymeleaf.org"
-  th:replace="~{base :: parent(~{::#content}, 'ContactHive | About')}"
+  th:replace="~{base :: parent(~{::#content}, 'ContactHive | Register')}"
 >
   <head></head>
   <body>
     <div id="content">
-      <h1>Welcome to the About Page</h1>
+      <h1>Welcome to the Register Page</h1>
     </div>
   </body>
 </html>
