--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="navbar" class="bg-white border-gray-200 dark:bg-gray-900">
+<nav th:fragment="navbar" class="bg-slate-800 border-gray-200 dark:bg-gray-900">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
@@ -12,18 +12,19 @@
         alt="ContactHive Logo"
       />
       <span
-        class="self-center text-2xl font-bold pb-1 whitespace-nowrap dark:text-white text-blue-700"
+        class="self-center text-2xl font-bold pb-1 whitespace-nowrap dark:text-white "
       >
         ContactHive
       </span>
     </a>
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <button
+      <a
+        data-th-href="@{/register}"
         type="button"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
       >
         Get started
-      </button>
+      </a>
       <button
         data-collapse-toggle="navbar-cta"
         type="button"
