feat: most interesting part

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
-<html 
-  lang="en" 
-  xmlns:th="http://www.thymeleaf.org" 
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
   th:fragment="parent(content, title)"
-  x-data="{ darkMode: localStorage.getItem('darkMode') === 'true' }" 
+  x-data="{ darkMode: localStorage.getItem('darkMode') === 'true' }"
   x-bind:class="{ 'dark': darkMode }"
 >
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+      defer
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
-        darkMode: 'class',
+        darkMode: "class",
         theme: {
           extend: {
             colors: {
               primary: {
-                light: '#3b82f6',
-                DEFAULT: '#2563eb',
-                dark: '#1d4ed8'
-              }
-            }
-          }
-        }
-      }
+                light: "#3b82f6",
+                DEFAULT: "#2563eb",
+                dark: "#1d4ed8",
+              },
+            },
+          },
+        },
+      };
     </script>
     <title th:text="${title}">ContactHive</title>
   </head>
   <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white">
-   
     <div data-th-replace="navbar :: navbar"></div>
- 
+
     <main>
       <section class="container mx-auto p-4" th:replace="${content}">
         <p>Base Page Content</p>
       </section>
     </main>
 
-    <footer class="bg-gray-100 dark:bg-gray-800 text-gray-900 dark:text-white py-4">
+    <footer
+      class="bg-gray-100 dark:bg-gray-800 text-gray-900 dark:text-white py-4"
+    >
+      <div class="container mx-auto text-center">
+        Made with ❤️ by Shiv Deshpande.
+      </div>
       <div class="container mx-auto text-center">
         © 2024 ContactHive. All Rights Reserved.
       </div>
