--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -32,11 +32,11 @@
     </script>
     <title th:text="${title}">ContactHive</title>
   </head>
-  <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-white">
+  <body class="bg-gray-100 text-gray-900 dark:bg-gray-950 dark:text-white">
     <div data-th-replace="navbar :: navbar"></div>
 
-    <main>
-      <section class="container mx-auto p-4" th:replace="${content}">
+    <main class="p-4">
+      <section class="container mx-auto" th:replace="${content}">
         <p>Base Page Content</p>
       </section>
     </main>
