--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav th:fragment="navbar" class=" border-gray-200 dark:bg-gray-900">
+<nav th:fragment="navbar" class=" border-gray-200 bg-white dark:bg-gray-900">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
