--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,14 +4,15 @@
   xmlns:th="http://www.thymeleaf.org"
   th:replace="~{base :: parent(~{::#content}, 'ContactHive | Register')}"
 >
-  <head></head>
+  <head>
+    <title>ContactHive | Register</title>
+  </head>
   <body>
     <div id="content">
       <div class="grid grid-cols-12">
         <div class="col-span-4 md:col-span-2 lg:col-span-3 xl:col-span-4"></div>
         <div class="col-span-12 md:col-span-8 lg:col-span-6 xl:col-span-4">
           <div
-            href="#"
             class="block p-6 border-t-8 border-blue-700 bg-white rounded-md shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-900"
           >
             <h5
@@ -22,7 +23,12 @@
             <p class="font-thin text-sm text-gray-500 dark:text-gray-400">
               Start managing your contacts on the cloud with ContactHive.
             </p>
-            <form action="">
+            <form
+              th:action="@{/register}"
+              method="post"
+              class="mt-5"
+              th:object="${userForm}"
+            >
               <div class="mb-5">
                 <label
                   for="name"
@@ -31,6 +37,7 @@
                 >
                 <input
                   type="text"
+                  th:field="*{name}"
                   id="name"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="Shiv"
@@ -46,6 +53,7 @@
                 >
                 <input
                   type="email"
+                  th:field="*{email}"
                   id="email"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="shivdeshpande131@gmail.com"
@@ -60,6 +68,7 @@
                 >
                 <input
                   type="password"
+                  th:field="*{password}"
                   id="password"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="********"
@@ -74,6 +83,7 @@
                 >
                 <input
                   type="text"
+                  th:field="*{phoneNumber}"
                   id="phone"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="1234567890"
@@ -87,6 +97,7 @@
                   >Write something about yourself</label
                 >
                 <textarea
+                  th:field="*{about}"
                   id="about"
                   rows="4"
                   class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
@@ -101,7 +112,7 @@
                 Sign Up
               </button>
               <button
-                type="button"
+                type="reset"
                 class="bg-transparent text-red-700 border-[1.5px] border-red-700 hover:bg-gray-200 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
               >
                 Reset form
