--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,6 +15,7 @@
           <div
             class="block p-6 border-t-8 border-blue-700 bg-white rounded-md shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-blue-700 dark:hover:bg-gray-900"
           >
+            <div data-th-replace="message::messagebox"></div>
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
