feat: form validation

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,6 +29,7 @@
               method="post"
               class="mt-5"
               th:object="${userForm}"
+              novalidate
             >
               <div class="mb-5">
                 <label
@@ -44,6 +45,11 @@
                   placeholder="Shiv"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('name')}"
+                  data-th-errors="*{name}"
+                  class="text-red-700"
+                ></p>
               </div>
 
               <div class="mb-5">
@@ -60,6 +66,12 @@
                   placeholder="shivdeshpande131@gmail.com"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('email')}"
+                  data-th-errors="*{email}"
+                  class="text-red-700"
+
+                ></p>
               </div>
               <div class="mb-5">
                 <label
@@ -75,6 +87,12 @@
                   placeholder="********"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('password')}"
+                  data-th-errors="*{password}"
+                  class="text-red-700"
+
+                ></p>
               </div>
               <div class="mb-5">
                 <label
@@ -90,6 +108,12 @@
                   placeholder="1234567890"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('phoneNumber')}"
+                  data-th-errors="*{phoneNumber}"
+                  class="text-red-700"
+
+                ></p>
               </div>
               <div class="mb-5">
                 <label
@@ -104,6 +128,12 @@
                   class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="Tell us about yourself..."
                 ></textarea>
+                <p
+                  data-th-if="${#fields.hasErrors('about')}"
+                  data-th-errors="*{about}"
+                  class="text-red-700"
+
+                ></p>
               </div>
 
               <button
