--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,74 +1,82 @@
-<nav th:fragment="navbar" class=" border-gray-200 bg-white dark:bg-gray-900">
+<nav
+  th:fragment="navbar"
+  class="border-gray-200 bg-white dark:bg-gray-900 shadow-md"
+>
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
-    <a
-      href="https://flowbite.com/"
-      class="flex items-center space-x-3 rtl:space-x-reverse"
-    >
+    <a th:href="@{/}" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img
-        data-th-src="@{'/images/phone-call.png'}"
-        class="h-8"
+        th:src="@{'/images/phone-call.png'}"
+        class="h-10 w-auto"
         alt="ContactHive Logo"
       />
       <span
-        class="self-center text-2xl font-bold pb-1 whitespace-nowrap dark:text-white"
+        class="self-center text-2xl font-extrabold text-gray-900 dark:text-white whitespace-nowrap"
       >
-        ContactHive
+        Contact<span class="text-blue-600 dark:text-blue-400">Hive</span>
       </span>
     </a>
     <div
-      class="flex md:order-2 space-x-3 gap-4 md:space-x-0 rtl:space-x-reverse"
+      class="flex md:order-2 items-center space-x-3 md:space-x-0 rtl:space-x-reverse"
     >
-      <div>
-        <button
-          x-on:click="darkMode = !darkMode; localStorage.setItem('darkMode', darkMode)"
-          class="bg-gray-200 dark:bg-gray-600 p-2 rounded-full focus:outline-none"
+      <button
+        x-on:click="darkMode = !darkMode; localStorage.setItem('darkMode', darkMode)"
+        class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center justify-center transition-colors duration-200"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-5 h-5 hidden dark:block"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x-show="!darkMode"
-            class="w-6 h-6 text-gray-400"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              style="scale: 0.9; transform-origin: 50% 50%;"
-              stroke-width="2.2"
-              d="M7.1597 6.38858L4.89251 3.29171M4.1684 10.4747L0.5 9.29179M4.1684 15.5253L0.5 16.7082M7.1597 19.6114L4.89251 22.7083M12 21.1721V25M16.8403 19.6114L19.1075 22.7083M19.8316 15.5253L23.5 16.7082M19.8316 10.4747L23.5 9.29179M16.8403 6.38858L19.1075 3.29171M12 4.82795V1M17.608 13C17.608 16.0737 15.0972 18.5655 12 18.5655C8.90281 18.5655 6.39205 16.0737 6.39205 13C6.39205 9.92628 8.90281 7.43455 12 7.43455C15.0972 7.43455 17.608 9.92628 17.608 13Z"
-            />
-          </svg>
-
-          <svg
-            x-show="darkMode"
-            class="w-6 h-6 text-gray-300"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
-            />
-          </svg>
-        </button>
-      </div>
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+          />
+        </svg>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="w-5 h-5 dark:hidden"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
+          />
+        </svg>
+      </button>
       <a
-        data-th-href="@{/register}"
-        type="button"
-        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        th:href="@{/register}"
+        class="text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-500 dark:hover:bg-blue-600 dark:focus:ring-blue-700 transition-colors duration-200 ml-4"
       >
         Get started
+        <svg
+          class="w-4 h-4 ml-2"
+          fill="none"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M13 7l5 5m0 0l-5 5m5-5H6"
+          ></path>
+        </svg>
       </a>
       <button
         data-collapse-toggle="navbar-cta"
         type="button"
-        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600 ml-2"
         aria-controls="navbar-cta"
         aria-expanded="false"
       >
@@ -95,12 +103,12 @@
       id="navbar-cta"
     >
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent dark:bg-gray-800 md:dark:bg-transparent dark:border-gray-700"
       >
         <li>
           <a
             th:href="@{/home}"
-            class="block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
+            class="block py-2 px-3 md:p-0 text-blue-600 bg-blue-50 rounded md:bg-transparent md:text-blue-600 md:dark:text-blue-400 font-semibold"
             aria-current="page"
           >
             Home
@@ -109,7 +117,7 @@
         <li>
           <a
             th:href="@{/about}"
-            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-600 md:dark:hover:text-blue-400 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 transition-colors duration-200"
           >
             About
           </a>
@@ -117,7 +125,7 @@
         <li>
           <a
             th:href="@{/services}"
-            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-600 md:dark:hover:text-blue-400 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 transition-colors duration-200"
           >
             Services
           </a>
@@ -125,7 +133,7 @@
         <li>
           <a
             th:href="@{/contact}"
-            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-600 md:dark:hover:text-blue-400 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 transition-colors duration-200"
           >
             Contact
           </a>
