--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,7 +7,12 @@
   <head></head>
   <body>
     <div id="content">
-      <h1>Welcome to Profile Page</h1>
+      <div th:if="${loggedInUser}" class="w-full">
+        <div data-th-replace="~{user/sidebar::sidebar}"></div>
+      </div>
+      <div class="pl-64 pt-20" id="content">
+        <h1>profile page</h1>
+      </div>
     </div>
   </body>
 </html>
